--- a/community_meetings/2023-06-27/community_mtg_6_27_2023.html
+++ b/community_meetings/2023-06-27/community_mtg_6_27_2023.html
@@ -3359,7 +3359,7 @@ const addFitScreenHelpText = () => {
 
 document.addEventListener('DOMContentLoaded', addFitScreenHelpText)
 </script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"fb0b321800a94d6d80cd87ba71aa7ffa","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x1f6e77bc12e4073aff9fb3bd14c239a","expires":14}</script>
     <script>(function(f){if(typeof exports==="object"&&typeof module!=="undefined"){module.exports=f()}else if(typeof define==="function"&&define.amd){define([],f)}else{var g;if(typeof window!=="undefined"){g=window}else if(typeof global!=="undefined"){g=global}else if(typeof self!=="undefined"){g=self}else{g=this}g.himalaya = f()}})(function(){var define,module,exports;return (function e(t,n,r){function s(o,u){if(!n[o]){if(!t[o]){var a=typeof require=="function"&&require;if(!u&&a)return a(o,!0);if(i)return i(o,!0);var f=new Error("Cannot find module '"+o+"'");throw f.code="MODULE_NOT_FOUND",f}var l=n[o]={exports:{}};t[o][0].call(l.exports,function(e){var n=t[o][1][e];return s(n?n:e)},l,l.exports,e,t,n,r)}return n[o].exports}var i=typeof require=="function"&&require;for(var o=0;o<r.length;o++)s(r[o]);return s})({1:[function(require,module,exports){
 'use strict';
 
@@ -5964,7 +5964,10 @@ https://github.com/pharmaR/case_studies
 # Case Studies: Common Themes
 
 * All implementations follow the risk validation process for R packages as outlined in the white paper
-Classification of package quality into high/medium/low or a binary high/low categorization, however the approach to the assessments themselves varies.
+
+--
+
+* Classification of package quality into high/medium/low or a binary high/low categorization, however the approach to the assessments themselves varies.
 
 --
 
